# stateless-validator

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: lint.yaml  release.yaml
crates/validator-core/: Cargo.toml
crates/validator-core/src/: chain_spec.rs  database.rs  executor.rs  lib.rs  validator_db.rs
validate/: Cargo.toml
validate/src/: generate.rs  lib.rs  produce.rs  validator.rs
validate/src/validator/: evm.rs  file.rs  rpc.rs
validate/src/validator/evm/: receipts.rs  signed.rs
validator-core/: Cargo.toml
validator-core/src/: executor.rs
