[workspace]

members = [
    "bin/validator",
    "validate",
]
resolver = "2"

[workspace.dependencies]
salt = { git = "https://github.com/megaeth-labs/salt.git", branch = "refactor/v1.3.4" }
mega-evm = { git = "https://github.com/megaeth-labs/mega-evm.git", branch = "main" }
revm = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }


[profile.bench]
debug = true
opt-level = 3
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
incremental = true


[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[patch.crates-io]
revm = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-bytecode = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-database = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-state = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-primitives = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-interpreter = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-inspector = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-context = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-context-interface = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
revm-database-interface = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
op-revm = { git = "https://github.com/megaeth-labs/mega-revm.git", rev = "6ba3dea5f6111b9e13a85f03751063059a2c2714" }
